--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   },
   "config": {},
   "dependencies": {
-    "babel-core": "^6.0.0",
+    "babel-core": "^6.24.1",
     "babel-jest": "^6.0.1",
-    "babel-preset-react": "^6.1.2",
-    "bl": "^1.0.0",
-    "download-file-sync": "^1.0.3",
-    "express": "^4.13.3",
+    "babel-preset-react": "^6.24.1",
+    "bl": "^1.2.1",
+    "download-file-sync": "^1.0.4",
+    "express": "^4.15.2",
     "flow-bin": "^0.18.1",
-    "install": "^0.4.0",
+    "install": "^0.4.4",
     "jest-cli": "^0.7.1",
-    "node-phantom-simple": "^2.2.0",
-    "npm": "^3.5.1",
-    "phantomjs": "^1.9.19",
-    "request": "^2.67.0"
+    "node-phantom-simple": "^2.2.4",
+    "npm": "^3.10.10",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "request": "^2.81.0"
   }
 }
